--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   provider: ^6.0.3
   fluttertoast: ^8.0.9
   firebase_core: ^1.23.0
+  firebase_auth:
   firebase_database: ^9.1.5
   firebase_storage: ^10.3.9
   image_picker: ^0.8.5+3
