--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_core: ^1.23.0
   firebase_auth:
   firebase_database: ^9.1.5
+  persistent_bottom_nav_bar: ^5.0.2
   firebase_storage: ^10.3.9
   image_picker: ^0.8.5+3
   flutter_svg: ^1.1.5
